[gd_scene load_steps=18 format=2]

[ext_resource path="res://Box.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://ui/GameWon.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/progress.png" type="Texture" id=4]
[ext_resource path="res://ui/MainMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/GameOver.tscn" type="PackedScene" id=6]
[ext_resource path="res://theme.tres" type="Theme" id=7]
[ext_resource path="res://ui/small_button_font.tres" type="DynamicFont" id=8]
[ext_resource path="res://assets/movable_box.png" type="Texture" id=9]
[ext_resource path="res://assets/moving_bad_box.png" type="Texture" id=10]
[ext_resource path="res://assets/FFFFORWA.TTF" type="DynamicFontData" id=11]
[ext_resource path="res://assets/bad_box.png" type="Texture" id=12]
[ext_resource path="res://assets/moving_box.png" type="Texture" id=13]
[ext_resource path="res://assets/player.png" type="Texture" id=14]
[ext_resource path="res://assets/goal_box.png" type="Texture" id=15]
[ext_resource path="res://assets/static_box.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 11 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -39.0
margin_top = -40.0
margin_right = 1069.0
margin_bottom = 637.0
mouse_filter = 2
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" parent="." instance=ExtResource( 1 )]
position = Vector2( 512, 300 )

[node name="RotateTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer"]
margin_left = 352.0
margin_top = 476.0
margin_right = 672.0
margin_bottom = 500.0
max_value = 10.0
step = 0.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
tint_under = Color( 0.137255, 0.137255, 0.137255, 1 )
tint_progress = Color( 0.917647, 0.917647, 0.917647, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
margin_left = 352.0
margin_top = 140.0
margin_right = 672.0
margin_bottom = 460.0

[node name="GameOver" parent="CanvasLayer" instance=ExtResource( 6 )]
visible = false
margin_left = 352.0
margin_top = 140.0
margin_right = 672.0
margin_bottom = 460.0

[node name="GameWon" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
margin_left = 352.0
margin_top = 140.0
margin_right = 672.0
margin_bottom = 460.0

[node name="RestartButton" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -88.0
margin_top = -88.0
margin_right = 88.0
margin_bottom = -40.0
focus_mode = 0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "RESTART LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
margin_left = 672.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
margin_left = 53.0
margin_top = 143.0
margin_right = 298.0
margin_bottom = 457.0
theme = ExtResource( 7 )
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_right = 245.0
margin_bottom = 32.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_top = 7.0
margin_right = 127.0
margin_bottom = 24.0
text = "The Player"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 245.0
margin_bottom = 79.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer2"]
margin_left = 42.0
margin_top = 7.0
margin_right = 76.0
margin_bottom = 24.0
text = "Goal"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 245.0
margin_bottom = 126.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 16 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer3"]
margin_left = 42.0
margin_top = 7.0
margin_right = 124.0
margin_bottom = 24.0
text = "Static box"

[node name="HBoxContainer4" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 245.0
margin_bottom = 173.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer4"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer4"]
margin_left = 42.0
margin_top = 7.0
margin_right = 132.0
margin_bottom = 24.0
text = "Moving box"

[node name="HBoxContainer5" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 188.0
margin_right = 245.0
margin_bottom = 220.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer5"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer5"]
margin_left = 42.0
margin_top = 7.0
margin_right = 245.0
margin_bottom = 24.0
text = "Can be moved with mouse"

[node name="HBoxContainer6" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 245.0
margin_bottom = 267.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer6"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer6"]
margin_left = 42.0
margin_top = 7.0
margin_right = 103.0
margin_bottom = 24.0
text = "Bad box"

[node name="HBoxContainer7" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
margin_top = 282.0
margin_right = 245.0
margin_bottom = 314.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer7"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 10 )

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer7"]
margin_left = 42.0
margin_top = 7.0
margin_right = 164.0
margin_bottom = 24.0
text = "Moving bad box"

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer"]
margin_right = 352.0
margin_bottom = 600.0
theme = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer2"]
margin_left = 27.0
margin_top = 227.0
margin_right = 324.0
margin_bottom = 373.0
custom_constants/separation = 14

[node name="InstrucationsLabel" type="Label" parent="CanvasLayer/CenterContainer2/VBoxContainer"]
margin_right = 297.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Game Instructions"
align = 1

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer2/VBoxContainer"]
margin_top = 36.0
margin_right = 297.0
margin_bottom = 53.0
text = "- The box rotates every 10 seconds"

[node name="Label4" type="Label" parent="CanvasLayer/CenterContainer2/VBoxContainer"]
margin_top = 67.0
margin_right = 297.0
margin_bottom = 84.0
text = "- Get the player to the goal"

[node name="Label2" type="Label" parent="CanvasLayer/CenterContainer2/VBoxContainer"]
margin_top = 98.0
margin_right = 297.0
margin_bottom = 115.0
text = "- Don't touch the red/orange boxes"

[node name="Label3" type="Label" parent="CanvasLayer/CenterContainer2/VBoxContainer"]
margin_top = 129.0
margin_right = 297.0
margin_bottom = 146.0
text = "- Tip: press space to instantly rotate"

[connection signal="timeout" from="RotateTimer" to="." method="_on_RotateTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="start_game" from="CanvasLayer/MainMenu" to="." method="_on_MainMenu_start_game"]
[connection signal="restart_game" from="CanvasLayer/GameOver" to="." method="_on_GameOver_restart_game"]
[connection signal="play_again" from="CanvasLayer/GameWon" to="." method="_on_GameWon_play_again"]
[connection signal="pressed" from="CanvasLayer/RestartButton" to="." method="_on_RestartButton_pressed"]
